# pmf2speciate

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
data/processed/: Ash_test.parquet  Ash_train.parquet  Combustion_test.parquet  Combustion_train.parquet  Dust_test.parquet  Dust_train.parquet  Microbial_test.parquet  Microbial_train.parquet  Volatilization_test.parquet  Volatilization_train.parquet  gas_uncertainty.parquet  pm_uncertainty.parquet  species_lookup.pkl  uncertainty.parquet
data/raw/: profiles.pkl  species_properties.pkl
notebooks/: esat_input_example.ipynb
scripts/: generate_test_data.py  generate_train_test_data.py  generate_training_data.py  helpers.py  preprocess_data.py  preprocess_speciate_data.py  profile_grouper.py  train_models.py  train_tier1_model.py
src/pmf2speciate/: __init__.py  classifier.py
src/pmf2speciate/data/: cas_lookup.pkl  gas_profile_compounds.parquet  id_lookup.pkl  pm_profile_compounds.parquet  profile_compounds.parquet
src/pmf2speciate/models/: Combustion_classification_report.csv  Combustion_model_summary.json  Combustion_random_forest.pkl  Microbial_classification_report.csv  Microbial_feature_names.pkl  Microbial_model_summary.json  Microbial_random_forest.pkl  Volatilization_classification_report.csv  Volatilization_model_summary.json  Volatilization_random_forest.pkl  generation_mechanism_classification_report.csv  generation_mechanism_model_summary.json  generation_mechanism_random_forest.pkl
src/pmf2speciate/visualization/: plotting.py
tests/: conftest.py  test_pmf2speciate.py
